Fixup: Studio Title Wrapping in Performer View

--- a/frontend/src/Performer/Details/PerformerDetailsStudio.css
+++ b/frontend/src/Performer/Details/PerformerDetailsStudio.css
@@ -43,7 +43,7 @@
 .left {
   display: flex;
   align-items: center;
-  flex: 0 1 350px;
+  flex: 0 1 600px;
 }
 
 .left,
